# UniversalCrawler

./: .dockerignore  .env.docker.example  .gitattributes  .gitignore  BASELINE_RUNTIME_REPORT.md  CHANGELOG.md  COMPREHENSIVE_CODE_REVIEW_2026-06-16.md  Dockerfile  GOAL_LOOP_PROMPT.md  LICENSE  MANIFEST.in  README.md  README_EN.md  SIGNAL_BASELINE_REPORT.md  WEBUI_IMAGE2_PROMPT.md  _apply_fix.py  _tmp_fix_p2.py  _tmp_patch_safe_slot.py  cli_entry.py  code.txt  code_report.html  code_report.json  count_project.py  docker-compose.yml  llms.txt  main.py  new_code.txt  pyproject.toml  pytest-items.txt  requirements-dev.txt  requirements-web.txt  requirements.txt  setup.py  task-7-report.md  web_main.py  ~$测试技术-大作业要求.docx  推送.bat  架构审查.md  测试案例.txt  软件测试技术-大作业封面.docx  (+3 more)
.github/workflows/: docker-build.yml  python-tests.yml
.superpowers/sdd/: task-7-report.md  task-8-report.md  task-9-report.md
Logs/: README.md  latest_error_summary.md
MediaCrawler/config/: base_config.py
UI/: __init__.py
UI/icon/: ICON_MANIFEST.md
app/: debug_logger.py  models.py  utils.py
app/config/: __init__.py  constants.py  settings.py  update_trust.py
app/controllers/: __init__.py  application_controller.py  application_lifecycle_mixin.py  controller_host_mixin.py  crawl_controller_mixin.py  debug_controller_mixin.py  desktop_host.py  download_controller_mixin.py  event_bridge.py  media_host_controller_mixin.py  media_library_mixin.py  session_mixin.py
app/core/: download_manager.py  download_manager_core.py  download_path_policy.py  downloaders.py  event_bus.py  events.py  media_filter.py  plugin_registry.py  registry.py  state.py
app/exceptions/: __init__.py  base.py  config.py  downloader.py  service.py  spider.py
app/models/: __init__.py  download_context.py  video_item.py
app/services/: __init__.py  app_state.py  auth_service.py  cache_service.py  (+32 more)
artifacts/: core-tests-local-ci-fix.xml  coverage-local-ci-fix.xml  ui-contract-local-1.xml  ui-contract-local-10.xml  ui-contract-local-11.xml  ui-contract-local-12.xml  ui-contract-local-13.xml  ui-contract-local-2.xml  ui-contract-local-3.xml  ui-contract-local-4.xml  ui-contract-local-5.xml  ui-contract-local-6.xml  ui-contract-local-7.xml  ui-contract-local-8.xml  ui-contract-local-9.xml
cli/: README.md  __init__.py  __main__.py  defaults.py  exit_codes.py  gui_selection.py  interactive.py  main.py  pipe.py  platform_catalog.py  runner.py  script_runner.py  sdk.py  selection.py  selection_base.py  自动化CLI开发记录.md
coursework/: README.md  automation_results.md  evidence_checklist.md  report.md  report_submission.md  requirements_audit.md  screenshot_plan.md  test_cases.csv  test_cases.xlsx  test_cases_compact.csv  test_cases_compact.xlsx
docker/: entrypoint.sh
docs/: README.md  SIGNAL_OPTIMIZATION_ACCEPTANCE_REPORT.md  SKILL_GUIDE.md  api.md  architecture.md  changelog.md  config.md  containerization.md  development.md  packaging.md  testing.md  update.md  windows-file-association.md
docx/: 2026-07-04-webui-log-local-time.md  2026-07-04-webui-selection-and-log-detail-contract.md  CHANGELOG.md  FINAL_ACCEPTANCE_REPORT.md  README.md  WebServer-FrontendDelta-Cache-Fix-20260628.md  WebUI增量路由和静态缓存修复.md  gui-webui-settings-i18n-contract.md  video-only-toggle-no-effect-fix-20260630.md  配置中心主题同步与代理契约修复.md  配置中心主题闪屏与入口崩溃修复.md  配置中心热加载零值回退修复.md  配置中心选项化与热加载修复.md
entry/: __init__.py  cli_entry.py  code_report_entry.py  dispatcher.py  gui_entry.py  interactive_entry.py  mode_selection_ui.py  qt_entry_utils.py  release_builder_entry.py  release_self_check.py  test_entry.py  updater_helper.py  web_entry.py  web_launch_runtime.py  web_port_dialog.py  web_tray_ui.py
graphify-out/: .graphify_detect.json  .graphify_python  .graphify_root
mermaid/: 01-system-overview.md  02-entrypoints-and-hosts.md  03-controller-and-events.md  04-plugin-and-spider-pipeline.md  05-download-pipeline.md  06-web-runtime.md  07-cli-sdk-runtime.md  08-data-models-and-context.md  09-testing-and-quality.md  10-packaging-and-delivery.md  README.md
packaging/: README.md  _gui_launcher.py  _updater_helper_launcher.py  _webui_launcher.py  build_installer.py  build_portable.py  build_release.py  generate_installer_assets.py  installer.iss  playwright_bundle.py  portable.spec  project_meta.py  release_lock.py  requirements-build.txt  runtime_hook.py  update_manifest.py
scripts/: __init__.py  capture_frontend_visual_matrix.py  update_bootstrap.py
shared/: __init__.py  cli_runner_runtime.py  controller_session.py  download_command_runtime.py  failed_page_projection.py  i18n_catalogs.py  icon_contract.py  interactive_command_runtime.py  interactive_selection.py  localization.py  log_classification.py  log_contract.py  log_display.py  log_i18n.py  log_pipeline_rules.py  log_platforms.py  network_proxy.py  pipe_selection.py  playwright_network_guard.py  release_identity.py  resilient_dns.py  runtime_adapters.py  runtime_options.py  scan_command_runtime.py  sdk_runtime.py  search_command_runtime.py  selection_base.py  selection_runtime.py  settings_metadata.py  spider_session_runtime.py  version.py
tests/: AGENTS.md  NAMING.md  README.md  __init__.py  conftest.py  frontend_static_assets.py  launcher.py  reproduce_user_bug.py  run_all_tests.py  run_blackbox_whitebox_tests.py  run_core_suite.py  test_anti_detection.py  test_application_controller.py  test_application_lifecycle_mixin.py  test_auth_service.py  test_bilibili_merge_process.py  test_ci_workflow.py  test_cli_defaults.py  test_cli_entry.py  test_cli_interactive_command.py  test_cli_main.py  test_cli_pipe.py  test_cli_public_module_aliases.py  test_cli_runner.py  test_cli_sdk.py  test_cli_selection.py  test_cli_skill_contract.py  test_completed_metadata_rules.py  test_concurrency_hardening.py  test_config_settings.py  test_contract.py  test_controller_host_mixin.py  test_controller_session_mixin.py  test_core_state_events.py  test_count_project.py  test_crawl_controller_mixin.py  test_cross_entry_consistency.py  test_debug_controller_mixin.py  test_debug_logger.py  test_debug_service.py  (+129 more)
ucrawl/: __init__.py
(+636 files in other folders)
