[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucrawl"
version = "3.6.17"
description = "UCrawl - 通用爬虫 (CLI / SDK / REST API / AI Skill)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "haohaizi554"},
]
keywords = ["crawler", "spider", "douyin", "bilibili", "kuaishou", "missav"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# 完整依赖需要 PyQt6, FastAPI, etc. (与原项目一致)
dependencies = [
    "PyQt6>=6.4.0",
    "fastapi>=0.139.0,<0.140.0",
    "starlette>=1.3.1,<2.0.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
    "requests>=2.34.2,<3.0.0",
    "urllib3>=2.7.0,<3.0.0",
    "idna>=3.15,<4.0",
    "defusedxml>=0.7.1,<1.0",
    "Pygments>=2.20.0,<3.0.0",
    "fake-useragent>=2.2.0",
    "emoji>=2.14.0",
    "gmssl>=3.2.2",
    "m3u8>=3.6.0",
    "xhshow>=0.1.9",
    "websockets>=12.0",
    "yt-dlp>=2026.6.9",
    "curl-cffi>=0.15.0,<1.0",
    "pycryptodome>=3.20.0",
    "playwright>=1.30.0",
    "rich>=14.1.0",
    "loguru>=0.7.0",
    "cachetools>=5.3.0",
]

[project.scripts]
# CLI 主命令（单次执行后退出）
ucrawl = "entry.cli_entry:main"
# 交互式引导（逐步选择）
ucrawl-i = "entry.interactive_entry:main"
# Web UI（启动 FastAPI + 浏览器）
ucrawl-web = "entry.web_entry:main"
# 自适应入口（不指定模式时自动检测）
ucrawl-auto = "entry.dispatcher:run"
# 测试套件（GUI / TUI / CLI 三模自适应）
ucrawl-test = "entry.test_entry:main"
# Release bootstrap / signing automation
ucrawl-update-bootstrap = "scripts.update_bootstrap:main"
# Secret leakage guard used before release commits
scan-secrets = "scripts.update_bootstrap:scan_secrets_main"

[project.gui-scripts]
# 桌面 GUI（Windows 上启动不弹黑窗）
ucrawl-gui = "entry.gui_entry:main"
# 测试启动器 GUI（Windows 上启动不弹黑窗）
ucrawl-test-gui = "entry.test_entry:main"

[tool.setuptools.packages.find]
include = ["app*", "cli*", "entry*", "shared*", "ucrawl*", "scripts*", "UI*", "tests*"]
exclude = ["docs*", "packaging*"]

[tool.setuptools.package-data]
ucrawl = []
cli = [
    "skill/*.md",
    "skill/examples/*.py",
]
UI = [
    "icon/*.png",
    "icon/*.md",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["F821", "F822", "F823"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "architecture: dependency direction and protocol fitness tests",
    "benchmark: performance benchmark tests (deselect with '-m \"not benchmark\"')",
]
